<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trenér Dádinka</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Nastavení</string>
    <string name="time_value">00:00</string>
    <string name="pause_button">PAUZA</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="label_training_time">Čas tréningu:</string>
    <string name="label_training_time_value">00:00</string>
    <string name="label_break_time">Čas odpočinku:</string>
    <string name="label_break_time_value">00:00</string>

</resources>
