<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.dada.timer.MainActivity" >

    <TextView
        android:id="@+id/time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#ff0000"
        android:scrollHorizontally="false"
        android:text="@string/time_value"
        android:textColor="#ffffff"
        android:textSize="185sp"
        android:typeface="sans" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:text="@string/start_button"
            android:textColorHint="@android:color/secondary_text_light_nodisable"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@android:drawable/btn_default"
            android:text="@string/stop_button"
            android:textColorHint="@android:color/secondary_text_light_nodisable"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1.00"
            android:gravity="left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/label_training_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_training_time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/label_training_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#ff0000"
                android:text="@string/label_break_time_value"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="60sp" />

            <SeekBar
                android:id="@+id/seek_bar_training_time_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="480"
                android:progress="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent" 
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="right"  >
            
            <TextView
                android:id="@+id/label_break_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/label_break_time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/label_break_time_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="#00ff00"
                android:text="@string/label_break_time_value"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textSize="60sp" />

            <SeekBar
                android:id="@+id/seek_bar_break_time_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
